--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Welcome to the official website of the game Alien Wars.</h1>
+            <h1>Welcome to the official website of the game Alien Wars. NEW</h1>
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
