--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Welcome to the official website of the game Alien Wars. which is new</h1>
+            <h1>Welcome to the official website of the game Alien Wars.</h1>
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
@@ -25,14 +25,14 @@
         <section id="home">
             <div class="container">
                 <h2>About My Work</h2>
-                <p>This is a simple website built with HTML, CSS, and JavaScript to showcase my work and services. Feel free to explore!</p>
+                <p>The Alien Wars game is an arcade game coded in python. The game was specially designed to show how games looked before 3D games were released. This game allows players to maneuver a spaceship as they shoot invaders that attack the earth.</p>
             </div>
         </section>
 
         <section id="about">
             <div class="container">
                 <h2>About Me</h2>
-                <p>I am a web developer passionate about building modern and user-friendly websites. My goal is to help businesses create their online presence.</p>
+                <p>Recently I have started a youtube channel with my friends and we are trying to grow and gain popularity as we begin to share and make content.</p>
             </div>
         </section>
 
@@ -40,10 +40,10 @@
             <div class="container">
                 <h2>My Services</h2>
                 <ul>
-                    <li>Web Development</li>
-                    <li>Web Design</li>
-                    <li>SEO Optimization</li>
-                    <li>Consultation</li>
+                    <li>Game Developer</li>
+                    <li>Game Designer</li>
+                    <li>Administrative Services</li>
+                    <li>Support</li>
                 </ul>
             </div>
         </section>
@@ -59,7 +59,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 My Professional Website. All rights reserved.</p>
+            <p>&copy; 2024 Alien Wars Website. All rights reserved.</p>
         </div>
     </footer>
 </body>
