--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <!-- Add the new YouTube link here -->
+                    <li><a href="https://www.youtube.com/channel/YOUR_CHANNEL_ID" target="_blank">YouTube</a></li>
                 </ul>
             </nav>
         </div>
@@ -25,14 +27,14 @@
         <section id="home">
             <div class="container">
                 <h2>About My Work</h2>
-                <p>The Alien Wars game is an arcade game coded in python. The game was specially designed to show how games looked before 3D games were released. This game allows players to maneuver a spaceship as they shoot invaders that attack the earth.</p>
+                <p>This is a simple website built with HTML, CSS, and JavaScript to showcase my work and services. Feel free to explore!</p>
             </div>
         </section>
 
         <section id="about">
             <div class="container">
                 <h2>About Me</h2>
-                <p>Recently I have started a youtube channel with my friends and we are trying to grow and gain popularity as we begin to share and make content.</p>
+                <p>I am a web developer passionate about building modern and user-friendly websites. My goal is to help businesses create their online presence.</p>
             </div>
         </section>
 
@@ -40,10 +42,10 @@
             <div class="container">
                 <h2>My Services</h2>
                 <ul>
-                    <li>Game Developer</li>
-                    <li>Game Designer</li>
-                    <li>Administrative Services</li>
-                    <li>Support</li>
+                    <li>Web Development</li>
+                    <li>Web Design</li>
+                    <li>SEO Optimization</li>
+                    <li>Consultation</li>
                 </ul>
             </div>
         </section>
@@ -59,7 +61,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Alien Wars Website. All rights reserved.</p>
+            <p>&copy; 2024 My Professional Website. All rights reserved.</p>
         </div>
     </footer>
 </body>
