--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="#services">Services</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <!-- Add the new YouTube link here -->
-                    <li><a href="https://www.youtube.com/channel/YOUR_CHANNEL_ID" target="_blank">YouTube</a></li>
+                    <li><a href="https://www.youtube.com/@MagnaTeens" target="_blank">YouTube</a></li>
                 </ul>
             </nav>
         </div>
@@ -27,14 +27,14 @@
         <section id="home">
             <div class="container">
                 <h2>About My Work</h2>
-                <p>This is a simple website built with HTML, CSS, and JavaScript to showcase my work and services. Feel free to explore!</p>
+                <p>Alien Wars is a game coded in python. The game allows players to maneuver a spaceship as they defend earth from invaders. The main objective of the game is to maintain a high streak and a good score.</p>
             </div>
         </section>
 
         <section id="about">
             <div class="container">
                 <h2>About Me</h2>
-                <p>I am a web developer passionate about building modern and user-friendly websites. My goal is to help businesses create their online presence.</p>
+                <p>I like coding new things and also like to showcase them to grow and get better. Recently I have started a youtube channel with my friends you can go and check it out.</p>
             </div>
         </section>
 
@@ -42,8 +42,8 @@
             <div class="container">
                 <h2>My Services</h2>
                 <ul>
-                    <li>Web Development</li>
-                    <li>Web Design</li>
+                    <li>Game Development</li>
+                    <li>Game Designer</li>
                     <li>SEO Optimization</li>
                     <li>Consultation</li>
                 </ul>
@@ -61,7 +61,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 My Professional Website. All rights reserved.</p>
+            <p>&copy; 2024 Alien Wars Website. All rights reserved.</p>
         </div>
     </footer>
 </body>
