--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Game Project Section -->
+    <section id="game-project">
+        <div class="container">
+            <h2>Alien Wars - The Game</h2>
+            <div class="game-info">
+                <img src="game-image.jpg" alt="Alien Wars Game" class="game-image">
+                <div class="game-description">
+                    <p>Alien Wars is an action-packed game where you control a spaceship to defend Earth from alien invaders. The goal is to protect the planet by maintaining a high streak and earning the best score possible. Join the fight now!</p>
+                    <p>Click below to download the game and start playing.</p>
+                    <a href="download-link" class="download-btn" target="_blank">Download Alien Wars</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Existing Website Content -->
     <header>
         <div class="container">
             <h1>Welcome to the official website of the game Alien Wars.</h1>
@@ -16,7 +32,6 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <!-- Add the new YouTube link here -->
                     <li><a href="https://www.youtube.com/@MagnaTeens" target="_blank">YouTube</a></li>
                 </ul>
             </nav>
@@ -27,14 +42,14 @@
         <section id="home">
             <div class="container">
                 <h2>About My Work</h2>
-                <p>Alien Wars is a game coded in python. The game allows players to maneuver a spaceship as they defend earth from invaders. The main objective of the game is to maintain a high streak and a good score.</p>
+                <p>Alien Wars is a game coded in Python. The game allows players to maneuver a spaceship as they defend Earth from invaders. The main objective of the game is to maintain a high streak and a good score.</p>
             </div>
         </section>
 
         <section id="about">
             <div class="container">
                 <h2>About Me</h2>
-                <p>I like coding new things and also like to showcase them to grow and get better. Recently I have started a youtube channel with my friends you can go and check it out.</p>
+                <p>I like coding new things and also like to showcase them to grow and get better. Recently, I have started a YouTube channel with my friends. You can go and check it out.</p>
             </div>
         </section>
 
@@ -43,7 +58,7 @@
                 <h2>My Services</h2>
                 <ul>
                     <li>Game Development</li>
-                    <li>Game Designer</li>
+                    <li>Game Design</li>
                     <li>SEO Optimization</li>
                     <li>Consultation</li>
                 </ul>
