--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="container">
                 <h2>Contact Me</h2>
                 <p>If you are interested in my services, feel free to contact me:</p>
-                <a href="mailto:youremail@example.com">Email me</a>
+                <a href="openwi65@gmail.com">Email me</a>
             </div>
         </section>
     </main>
