--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Game Project Section -->
+    <!-- Game Project Section - Placed at the top -->
     <section id="game-project">
         <div class="container">
             <h2>Alien Wars - The Game</h2>
@@ -22,7 +22,7 @@
         </div>
     </section>
 
-    <!-- Existing Website Content -->
+    <!-- Header with Navigation -->
     <header>
         <div class="container">
             <h1>Welcome to the official website of the game Alien Wars.</h1>
@@ -38,6 +38,7 @@
         </div>
     </header>
 
+    <!-- Main Content -->
     <main>
         <section id="home">
             <div class="container">
@@ -69,11 +70,12 @@
             <div class="container">
                 <h2>Contact Me</h2>
                 <p>If you are interested in my services, feel free to contact me:</p>
-                <a href="openwi65@gmail.com">Email me</a>
+                <a href="mailto:youremail@example.com">Email me</a>
             </div>
         </section>
     </main>
 
+    <!-- Footer -->
     <footer>
         <div class="container">
             <p>&copy; 2024 Alien Wars Website. All rights reserved.</p>
