--- a/index.html
+++ b/index.html
@@ -7,22 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Game Project Section - Placed at the top -->
-    <section id="game-project">
-        <div class="container">
-            <h2>Alien Wars - The Game</h2>
-            <div class="game-info">
-                <img src="game-image.jpg" alt="Alien Wars Game" class="game-image">
-                <div class="game-description">
-                    <p>Alien Wars is an action-packed game where you control a spaceship to defend Earth from alien invaders. The goal is to protect the planet by maintaining a high streak and earning the best score possible. Join the fight now!</p>
-                    <p>Click below to download the game and start playing.</p>
-                    <a href="download-link" class="download-btn" target="_blank">Download Alien Wars</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Header with Navigation -->
+    <!-- Header with Navigation - Placed at the very top -->
     <header>
         <div class="container">
             <h1>Welcome to the official website of the game Alien Wars.</h1>
@@ -37,6 +22,21 @@
             </nav>
         </div>
     </header>
+
+    <!-- Game Project Section - Below the header -->
+    <section id="game-project">
+        <div class="container">
+            <h2>Alien Wars - The Game</h2>
+            <div class="game-info">
+                <img src="game-image.jpg" alt="Alien Wars Game" class="game-image">
+                <div class="game-description">
+                    <p>Alien Wars is an action-packed game where you control a spaceship to defend Earth from alien invaders. The goal is to protect the planet by maintaining a high streak and earning the best score possible. Join the fight now!</p>
+                    <p>Click below to download the game and start playing.</p>
+                    <a href="download-link" class="download-btn" target="_blank">Download Alien Wars</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Main Content -->
     <main>
