--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <p>Alien Wars is an action-packed game where you control a spaceship to defend Earth from alien invaders. The goal is to protect the planet by maintaining a high streak and earning the best score possible. Join the fight now!</p>
                     <p> ‎ </p>
                     <p> ‎  </p>
-                    <a href="download-link" class="download-btn" target="_blank">Download Alien Wars</a>
+                    <a href="C:\Users\openw\Downloads\AlienWarsGameRemaster.zip" class="download-btn" target="_blank">Download Alien Wars</a>
                 </div>
             </div>
         </div>
