--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="container">
             <h2>Alien Wars - The Game</h2>
             <div class="game-info">
-                <img src="game-image.jpg" alt="Alien Wars Game" class="game-image">
+                <img src="Asteroid.png" alt="Alien Wars Game Animation" class="game-image">
                 <div class="game-description">
                     <p>Alien Wars is an action-packed game where you control a spaceship to defend Earth from alien invaders. The goal is to protect the planet by maintaining a high streak and earning the best score possible. Join the fight now!</p>
                     <p> ‎ </p>
