--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Header with Navigation - Placed at the very top -->
     <header>
         <div class="container">
-            <h1>Welcome to the official website of the game Alien Wars.</h1>
+            <h1>Welcome to the official website of the game Alien Wars. TEST</h1>
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
