--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="game-info">
                 <img src="" alt="Alien Wars Game Animation" class="game-image">
                 <div class="game-description">
-                    <p>Alien Wars is an action-packed game where you control a spaceship to defend Earth from alien invaders. The goal is to protect the planet by maintaining a high streak and earning the best score possible. Join the fight now!</p>
+                    <p>Alien Wars is an action-packed game where you control a spaceship to defend Earth from alien invaders. This game was coded in python you can find everything such as images, audios and notes inside the Folders. The goal is to protect the planet by maintaining a high streak and earning the best score possible. Join the fight now!</p>
                     <p> ‎ </p>
                     <p> ‎  </p>
                     <a href="https://drive.google.com/uc?export=download&id=19gpn_r_dLv5mRgC11pW1xqG-x-1gxzwK" class="download-btn" target="_blank">Download Alien Wars</a>
