--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <header>
         <div class="container">
             <h1>Welcome to the official website of the game Alien Wars. TEST</h1>
-            <nav>
+            <div class="menu-toggle" id="menu-toggle">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+            <nav id="nav">
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -30,9 +35,7 @@
             <div class="game-info">
                 <img src="" alt="Alien Wars Game Animation" class="game-image">
                 <div class="game-description">
-                    <p>Alien Wars is an action-packed game where you control a spaceship to defend Earth from alien invaders. This game was coded in python you can find everything such as images, audios and notes inside the Folders. The goal is to protect the planet by maintaining a high streak and earning the best score possible. Join the fight now!</p>
-                    <p> ‎ </p>
-                    <p> ‎  </p>
+                    <p>Alien Wars is an action-packed game where you control a spaceship to defend Earth from alien invaders. This game was coded in Python. The goal is to protect the planet by maintaining a high streak and earning the best score possible. Join the fight now!</p>
                     <a href="https://drive.google.com/uc?export=download&id=19gpn_r_dLv5mRgC11pW1xqG-x-1gxzwK" class="download-btn" target="_blank">Download Alien Wars</a>
                 </div>
             </div>
@@ -82,5 +85,7 @@
             <p>&copy; 2024 Alien Wars Website. All rights reserved.</p>
         </div>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
