--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Header with Navigation - Placed at the very top -->
     <header>
         <div class="container">
-            <h1>Welcome to the official website of the game Alien Wars. TEST</h1>
+            <h1>Alien Wars - The Game</h1>
             <div class="menu-toggle" id="menu-toggle">
                 <span class="bar"></span>
                 <span class="bar"></span>
