--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="container">
             <h2>Alien Wars - The Game</h2>
             <div class="game-info">
-                <img src="" alt="Alien Wars Game Animation" class="game-image">
+                <img src="Asteroid.png" alt="Alien Wars Game Animation" class="game-image">
                 <div class="game-description">
                     <p>Alien Wars is an action-packed game where you control a spaceship to defend Earth from alien invaders. This game was coded in Python. The goal is to protect the planet by maintaining a high streak and earning the best score possible. Join the fight now!</p>
                     <p> ‎ </p> 
