--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <p> ‎ </p> 
                 <p> ‎ </p> 
                 <p> ‎ </p> 
-                <p>Alien Wars is a game coded in Python. The game allows players to maneuver a spaceship as they defend Earth from invaders. The main objective of the game is to maintain a high streak and a good score.</p>
+                <p>Alien Wars is a game coded in Python. The game allows players to maneuver a spaceship as they defend Earth from invaders. The main objective of the game is to maintain a high streak and a good score. I used Visual Studio Code and also tested the game there. I tried making it android compatible but it didnt work out. The images, sounds and gifs werent made by me so I do not own any of those. Please do not delete any files to make the application work fine. This folder does not include the python code so that people cant steal my game.</p>
             </div>
         </section>
 
@@ -62,7 +62,7 @@
                 <p> ‎ </p> 
                 <p> ‎ </p> 
                 <p> ‎ </p> 
-                <p>I like coding new things and also like to showcase them to grow and get better. Recently, I have started a YouTube channel with my friends. You can go and check it out.</p>
+                <p>I like coding new things and also like to showcase them to grow and get better. Recently, I have started a YouTube channel with my friends. You can go and check it out if you like. Of course as a 14 year old boy, my favourite food is pizza and I enjoy myself on the internet a lot. Also, you can call me Lazy.</p>
             </div>
         </section>
 
@@ -75,8 +75,8 @@
                 <ul>
                     <li>Game Development</li>
                     <li>Game Design</li>
-                    <li>SEO Optimization</li>
-                    <li>Consultation</li>
+                    <li>Marketing</li>
+                    <li>Business</li>
                 </ul>
             </div>
         </section>
@@ -87,10 +87,11 @@
                 <p> ‎ </p> 
                 <p> ‎ </p> 
                 <p> ‎ </p>
-                <p>If you are interested in my services, feel free to contact me:</p>
+                <p>If you are interested in my services, feel free to contact me. I have plenty of accounts. If I might not answer, Im busy.</p>
                 <p> ‎ </p> 
                 <p> ‎ </p> 
                 <a href="mailto:youremail@example.com">Email me</a>
+                <a href="mailto:youremail@example.com">Discord</a>
             </div>
         </section>
     </main>
@@ -98,7 +99,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 Alien Wars Website. All rights reserved.</p>
+            <p>&copy; 2024 Alien Wars Website by Lazy. All rights reserved.</p>
         </div>
     </footer>
 
