--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Header with Navigation - Placed at the very top -->
     <header>
         <div class="container">
-            <h1>Alien Wars - The Game</h1>
+            <h1 class="fade-text">Alien Wars - The Game</h1>
             <div class="menu-toggle" id="menu-toggle">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -18,11 +18,11 @@
             </div>
             <nav id="nav">
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="https://www.youtube.com/@MagnaTeens" target="_blank">YouTube</a></li>
+                    <li><a href="#home" class="fade-text">Home</a></li>
+                    <li><a href="#about" class="fade-text">About</a></li>
+                    <li><a href="#services" class="fade-text">Services</a></li>
+                    <li><a href="#contact" class="fade-text">Contact</a></li>
+                    <li><a href="https://www.youtube.com/@MagnaTeens" target="_blank" class="fade-text">YouTube</a></li>
                 </ul>
             </nav>
         </div>
@@ -31,14 +31,14 @@
     <!-- Game Project Section - Below the header -->
     <section id="game-project">
         <div class="container">
-            <h2>Alien Wars - The Game</h2>
+            <h2 class="fade-text">Alien Wars - The Game</h2>
             <div class="game-info">
                 <img src="Asteroid.png" alt="Alien Wars Game Animation" class="game-image">
                 <div class="game-description">
-                    <p>Alien Wars is an action-packed game where you control a spaceship to defend Earth from alien invaders. This game was coded in Python. The goal is to protect the planet by maintaining a high streak and earning the best score possible. Join the fight now!</p>
-                    <p> ‎ </p> 
-                    <p> ‎ </p> 
-                    <a href="https://drive.google.com/uc?export=download&id=19gpn_r_dLv5mRgC11pW1xqG-x-1gxzwK" class="download-btn" target="_blank">Download Alien Wars</a>
+                    <p class="fade-text">Alien Wars is an action-packed game where you control a spaceship to defend Earth from alien invaders. This game was coded in Python. The goal is to protect the planet by maintaining a high streak and earning the best score possible. Join the fight now!</p>
+                    <p class="fade-text"> ‎ </p> 
+                    <p class="fade-text"> ‎ </p> 
+                    <a href="https://drive.google.com/uc?export=download&id=19gpn_r_dLv5mRgC11pW1xqG-x-1gxzwK" class="download-btn fade-text" target="_blank">Download Alien Wars</a>
                 </div>
             </div>
         </div>
@@ -48,50 +48,50 @@
     <main>
         <section id="home">
             <div class="container">
-                <h2>About My Work</h2>
-                <p> ‎ </p> 
-                <p> ‎ </p> 
-                <p> ‎ </p> 
-                <p>Alien Wars is a game coded in Python. The game allows players to maneuver a spaceship as they defend Earth from invaders. The main objective of the game is to maintain a high streak and a good score. I used Visual Studio Code and also tested the game there. I tried making it android compatible but it didnt work out. The images, sounds and gifs werent made by me so I do not own any of those. Please do not delete any files to make the application work fine. This folder does not include the python code so that people cant steal my game.</p>
+                <h2 class="fade-text">About My Work</h2>
+                <p class="fade-text"> ‎ </p> 
+                <p class="fade-text"> ‎ </p> 
+                <p class="fade-text"> ‎ </p> 
+                <p class="fade-text">Alien Wars is a game coded in Python. The game allows players to maneuver a spaceship as they defend Earth from invaders...</p>
             </div>
         </section>
 
         <section id="about">
             <div class="container">
-                <h2>About Me</h2>
-                <p> ‎ </p> 
-                <p> ‎ </p> 
-                <p> ‎ </p> 
-                <p>I like coding new things and also like to showcase them to grow and get better. Recently, I have started a YouTube channel with my friends. You can go and check it out if you like. Of course as a 14 year old boy, my favourite food is pizza and I enjoy myself on the internet a lot. Also, you can call me Lazy.</p>
+                <h2 class="fade-text">About Me</h2>
+                <p class="fade-text"> ‎ </p> 
+                <p class="fade-text"> ‎ </p> 
+                <p class="fade-text"> ‎ </p> 
+                <p class="fade-text">I like coding new things and also like to showcase them to grow and get better. Recently, I have started a YouTube channel with my friends...</p>
             </div>
         </section>
 
         <section id="services">
             <div class="container">
-                <h2>My Services</h2>
-                <p> ‎ </p> 
-                <p> ‎ </p> 
-                <p> ‎ </p>
+                <h2 class="fade-text">My Services</h2>
+                <p class="fade-text"> ‎ </p> 
+                <p class="fade-text"> ‎ </p> 
+                <p class="fade-text"> ‎ </p>
                 <ul>
-                    <li>Game Development</li>
-                    <li>Game Design</li>
-                    <li>Marketing</li>
-                    <li>Business</li>
+                    <li class="fade-text">Game Development</li>
+                    <li class="fade-text">Game Design</li>
+                    <li class="fade-text">Marketing</li>
+                    <li class="fade-text">Business</li>
                 </ul>
             </div>
         </section>
 
         <section id="contact">
             <div class="container">
-                <h2>Contact Me</h2>
-                <p> ‎ </p> 
-                <p> ‎ </p> 
-                <p> ‎ </p>
-                <p>If you are interested in my services, feel free to contact me. I have plenty of accounts. If I might not answer, Im busy.</p>
-                <p> ‎ </p> 
-                <p> ‎ </p> 
-                <a href="mailto:youremail@example.com">Email me</a>
-                <a href="mailto:youremail@example.com">Discord</a>
+                <h2 class="fade-text">Contact Me</h2>
+                <p class="fade-text"> ‎ </p> 
+                <p class="fade-text"> ‎ </p> 
+                <p class="fade-text"> ‎ </p>
+                <p class="fade-text">If you are interested in my services, feel free to contact me. I have plenty of accounts. If I might not answer, I'm busy.</p>
+                <p class="fade-text"> ‎ </p> 
+                <p class="fade-text"> ‎ </p> 
+                <a href="mailto:youremail@example.com" class="fade-text">Email me</a>
+                <a href="mailto:youremail@example.com" class="fade-text">Discord</a>
             </div>
         </section>
     </main>
@@ -99,10 +99,36 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 Alien Wars Website by Lazy. All rights reserved.</p>
+            <p class="fade-text">&copy; 2024 Alien Wars Website by Lazy. All rights reserved.</p>
         </div>
     </footer>
 
     <script src="script.js"></script>
+
+    <script>
+    // Create a new Intersection Observer
+    const observer = new IntersectionObserver((entries, observer) => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                // Add the 'visible' class to the element when it enters the viewport
+                entry.target.classList.add('visible');
+            } else {
+                // Remove the 'visible' class when the element leaves the viewport
+                entry.target.classList.remove('visible');
+            }
+        });
+    }, {
+        threshold: 0.5 // Trigger when 50% of the element is visible
+    });
+
+    // Select all elements you want to apply the fade effect to
+    const fadeElements = document.querySelectorAll('.fade-text');
+    
+    // Observe each fade-in element
+    fadeElements.forEach(element => {
+        observer.observe(element);
+    });
+</script>
+
 </body>
 </html>
