--- a/index.html
+++ b/index.html
@@ -7,84 +7,128 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Hero Section -->
-    <header class="hero">
+    <!-- Header with Navigation - Placed at the very top -->
+    <header>
         <div class="container">
-            <h1 class="fade-text">Alien Wars - Defend Earth</h1>
-            <p class="fade-text">Jump into the action-packed adventure and save the planet from alien invaders!</p>
-            <a href="https://drive.google.com/uc?export=download&id=19gpn_r_dLv5mRgC11pW1xqG-x-1gxzwK" class="download-btn fade-text" target="_blank">Download Alien Wars</a>
+            <h1 class="fade-text">Alien Wars - The Game</h1>
+            <div class="menu-toggle" id="menu-toggle">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+            <nav id="nav">
+                <ul>
+                    <li><a href="#home" class="fade-text">Home</a></li>
+                    <li><a href="#about" class="fade-text">About</a></li>
+                    <li><a href="#services" class="fade-text">Services</a></li>
+                    <li><a href="#contact" class="fade-text">Contact</a></li>
+                    <li><a href="https://www.youtube.com/@MagnaTeens" target="_blank" class="fade-text">YouTube</a></li>
+                </ul>
+            </nav>
         </div>
-        <video autoplay muted loop class="hero-video">
-            <source src="gameplay.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
     </header>
 
-    <!-- Game Info Section -->
-<section id="game-project" style="background-color: #eef2f7;">
-    <div class="container">
-        <h2 class="fade-text">About the Game</h2>
-        <div class="game-info">
-            <div class="game-description">
-                <p class="fade-text">Alien Wars is an action-packed game coded in Python. Command a spaceship, fend off alien invaders, and protect Earth. Earn high scores and aim for victory!</p>
-                <p class="fade-text">Features include:</p>
-                <ul class="fade-text">
-                    <li>Dynamic gameplay</li>
-                    <li>Endless mode for replayability</li>
-                    <li>Unique soundtracks</li>
-                </ul>
-                <a href="https://drive.google.com/uc?export=download&id=19gpn_r_dLv5mRgC11pW1xqG-x-1gxzwK" class="download-btn fade-text" target="_blank">Download Now</a>
+    <!-- Game Project Section - Below the header -->
+    <section id="game-project">
+        <div class="container">
+            <h2 class="fade-text">Alien Wars - The Game</h2>
+            <div class="game-info">
+                <img src="Asteroid.png" alt="Alien Wars Game Animation" class="game-image">
+                <div class="game-description">
+                    <p class="fade-text">Alien Wars is an action-packed game where you control a spaceship to defend Earth from alien invaders. This game was coded in Python. The goal is to protect the planet by maintaining a high streak and earning the best score possible. Join the fight now!</p>
+                    <p class="fade-text"> ‎ </p> 
+                    <p class="fade-text"> ‎ </p> 
+                    <a href="https://drive.google.com/uc?export=download&id=19gpn_r_dLv5mRgC11pW1xqG-x-1gxzwK" class="download-btn fade-text" target="_blank">Download Alien Wars</a>
+                </div>
             </div>
         </div>
-    </div>
-</section>
-
-    <!-- About Sections -->
-    <section id="about-work" style="background-color: white;">
-        <div class="container">
-            <h2 class="fade-text">About My Work</h2>
-            <p class="fade-text">I am passionate about game development, blending creativity with technical skills. "Alien Wars" represents months of dedication and coding in Python, creating an engaging and fun gaming experience.</p>
-        </div>
     </section>
 
-    <section id="about-me" style="background-color: #eef2f7;">
-        <div class="container">
-            <h2 class="fade-text">About Me</h2>
-            <p class="fade-text">Hi, I'm Amir! I enjoy coding, game development, and showcasing my projects. My dream is to create immersive experiences that people enjoy. Check out my YouTube channel to follow my journey!</p>
-        </div>
-    </section>
+    <!-- Main Content -->
+    <main>
+        <section id="home">
+            <div class="container">
+                <h2 class="fade-text">About My Work</h2>
+                <p class="fade-text"> ‎ </p> 
+                <p class="fade-text"> ‎ </p> 
+                <p class="fade-text"> ‎ </p> 
+                <p class="fade-text">Alien Wars is a game coded in Python. The game allows players to maneuver a spaceship as they defend Earth from invaders...</p>
+            </div>
+        </section>
 
-    <!-- Services -->
-    <section id="services" style="background-color: white;">
-        <div class="container">
-            <h2 class="fade-text">My Services</h2>
-            <p class="fade-text">I offer expertise in the following areas:</p>
-            <ul class="fade-text">
-                <li>Game Development: From concept to launch.</li>
-                <li>Game Design: Visuals and functionality.</li>
-                <li>Marketing: Get your game noticed.</li>
-                <li>Business Strategy: Turn your passion into profit.</li>
-            </ul>
-        </div>
-    </section>
+        <section id="about">
+            <div class="container">
+                <h2 class="fade-text">About Me</h2>
+                <p class="fade-text"> ‎ </p> 
+                <p class="fade-text"> ‎ </p> 
+                <p class="fade-text"> ‎ </p> 
+                <p class="fade-text">I like coding new things and also like to showcase them to grow and get better. Recently, I have started a YouTube channel with my friends...</p>
+            </div>
+        </section>
 
-    <!-- Contact Section -->
-    <section id="contact" style="background-color: #eef2f7;">
-        <div class="container">
-            <h2 class="fade-text">Contact Me</h2>
-            <p class="fade-text">Have questions or want to collaborate? Reach out!</p>
-            <a href="mailto:youremail@example.com" class="contact-link fade-text">Email</a>
-            <a href="https://discord.gg/yourdiscord" class="contact-link fade-text">Discord</a>
-        </div>
-    </section>
+        <section id="services">
+            <div class="container">
+                <h2 class="fade-text">My Services</h2>
+                <p class="fade-text"> ‎ </p> 
+                <p class="fade-text"> ‎ </p> 
+                <p class="fade-text"> ‎ </p>
+                <ul>
+                    <li class="fade-text">Game Development</li>
+                    <li class="fade-text">Game Design</li>
+                    <li class="fade-text">Marketing</li>
+                    <li class="fade-text">Business</li>
+                </ul>
+            </div>
+        </section>
+
+        <section id="contact">
+            <div class="container">
+                <h2 class="fade-text">Contact Me</h2>
+                <p class="fade-text"> ‎ </p> 
+                <p class="fade-text"> ‎ </p> 
+                <p class="fade-text"> ‎ </p>
+                <p class="fade-text">If you are interested in my services, feel free to contact me. I have plenty of accounts. If I might not answer, I'm busy.</p>
+                <p class="fade-text"> ‎ </p> 
+                <p class="fade-text"> ‎ </p> 
+                <a href="mailto:youremail@example.com" class="fade-text">Email me</a>
+                <a href="mailto:youremail@example.com" class="fade-text">Discord</a>
+            </div>
+        </section>
+    </main>
 
     <!-- Footer -->
-    <footer style="background-color: #333;">
+    <footer>
         <div class="container">
             <p class="fade-text">&copy; 2024 Alien Wars Website by Lazy. All rights reserved.</p>
         </div>
     </footer>
 
     <script src="script.js"></script>
+
+    <script>
+    // Create a new Intersection Observer
+    const observer = new IntersectionObserver((entries, observer) => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                // Add the 'visible' class to the element when it enters the viewport
+                entry.target.classList.add('visible');
+            } else {
+                // Remove the 'visible' class when the element leaves the viewport
+                entry.target.classList.remove('visible');
+            }
+        });
+    }, {
+        threshold: 0.5 // Trigger when 50% of the element is visible
+    });
+
+    // Select all elements you want to apply the fade effect to
+    const fadeElements = document.querySelectorAll('.fade-text');
+    
+    // Observe each fade-in element
+    fadeElements.forEach(element => {
+        observer.observe(element);
+    });
+</script>
+
 </body>
 </html>
